# Trusify

./: package-lock.json  package.json
contract/: Cargo.toml
contract/neardev/: dev-account  dev-account.env
contract/src/: Contract_Function_Test.rs  lib.rs
frontend/: App.jsx  index.css  index.html  near-interface.js  package-lock.json  package.json  pnpm-lock.yaml
frontend/components/: AddProductButton.jsx  Button.jsx  Layout.jsx  LeftPane.jsx  Pinata.jsx  RightPane.jsx
frontend/components/Navbar/: Button.jsx  LogoContainer.jsx  NavItems.jsx  index.jsx
frontend/components/ProductDetail/: InFoProductDetail.jsx  IngProductDetail.jsx
frontend/pages/: BecomeAnOwner.jsx  CreateProduct.jsx  Home.jsx  ProductDetail.jsx
